--- a/jj/Base.lproj/Main.storyboard
+++ b/jj/Base.lproj/Main.storyboard
@@ -77,8 +77,8 @@
                         <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                         <rect key="contentRect" x="196" y="240" width="800" height="800"/>
                         <rect key="screenRect" x="0.0" y="0.0" width="1680" height="1027"/>
-                        <value key="minSize" type="size" width="750" height="500"/>
-                        <value key="maxSize" type="size" width="950" height="1000"/>
+                        <value key="minSize" type="size" width="750" height="600"/>
+                        <value key="maxSize" type="size" width="950" height="900"/>
                         <connections>
                             <outlet property="delegate" destination="B8D-0N-5wS" id="98r-iN-zZc"/>
                         </connections>
@@ -95,12 +95,12 @@
         <scene sceneID="hIz-AP-VOD">
             <objects>
                 <viewController id="XfG-lQ-9wD" customClass="ViewController" sceneMemberID="viewController">
-                    <view key="view" misplaced="YES" id="m2S-Jp-Qdl">
-                        <rect key="frame" x="0.0" y="0.0" width="996" height="300"/>
+                    <view key="view" id="m2S-Jp-Qdl">
+                        <rect key="frame" x="0.0" y="0.0" width="996" height="381"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <subviews>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="8Lg-Pr-V9V">
-                                <rect key="frame" x="956" y="154" width="20" height="20"/>
+                                <rect key="frame" x="956" y="261" width="20" height="20"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="20" id="GdT-r7-rlb"/>
                                     <constraint firstAttribute="width" constant="20" id="vt6-mb-ZLs"/>
@@ -114,7 +114,7 @@
                                 </connections>
                             </button>
                             <textField verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="6GZ-Yi-2gU">
-                                <rect key="frame" x="832" y="153" width="100" height="21"/>
+                                <rect key="frame" x="832" y="261" width="100" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="wkc-FO-jI7"/>
                                 </constraints>
@@ -125,7 +125,7 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="kIS-Y2-qAN">
-                                <rect key="frame" x="14" y="146" width="67" height="32"/>
+                                <rect key="frame" x="14" y="254" width="67" height="32"/>
                                 <buttonCell key="cell" type="push" title="重置" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="pMr-dC-7f3">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -135,7 +135,7 @@
                                 </connections>
                             </button>
                             <button translatesAutoresizingMaskIntoConstraints="NO" id="D8r-gV-7Ni">
-                                <rect key="frame" x="473" y="139" width="50" height="50"/>
+                                <rect key="frame" x="473" y="246" width="50" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="GL5-ej-j0H"/>
                                     <constraint firstAttribute="height" constant="50" id="SKv-6y-sn0"/>
@@ -149,7 +149,7 @@
                                 </connections>
                             </button>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="XXk-3K-G8L">
-                                <rect key="frame" x="94" y="146" width="94" height="32"/>
+                                <rect key="frame" x="94" y="254" width="94" height="32"/>
                                 <buttonCell key="cell" type="push" title="自动刷新" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="XpX-3j-2NL">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -159,7 +159,7 @@
                                 </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="bst-dh-6o2">
-                                <rect key="frame" x="116" y="227" width="88" height="23"/>
+                                <rect key="frame" x="116" y="334" width="88" height="23"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="沪深300" id="xac-Dp-VtI">
                                     <font key="font" metaFont="systemBold" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -167,7 +167,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Iqw-ch-aNB">
-                                <rect key="frame" x="116" y="194" width="89" height="23"/>
+                                <rect key="frame" x="116" y="301" width="89" height="23"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="3500.00" id="XtI-ob-4JA">
                                     <font key="font" metaFont="systemBold" size="20"/>
                                     <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -175,7 +175,7 @@
                                 </textFieldCell>
                             </textField>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0KS-N6-L1S">
-                                <rect key="frame" x="223" y="207" width="32" height="15"/>
+                                <rect key="frame" x="223" y="314" width="32" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="438-iL-ZEA"/>
                                     <constraint firstAttribute="width" constant="32" id="bCu-Cj-crG"/>
@@ -183,7 +183,7 @@
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="up" id="Lbq-xg-hOp"/>
                             </imageView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="k0G-Y9-9Qm">
-                                <rect key="frame" x="455" y="227" width="86" height="23"/>
+                                <rect key="frame" x="455" y="334" width="86" height="23"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="上证指数" id="uSd-xV-kjZ">
                                     <font key="font" metaFont="systemBold" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -191,7 +191,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="Sav-Xy-M5R">
-                                <rect key="frame" x="454" y="194" width="89" height="23"/>
+                                <rect key="frame" x="454" y="301" width="89" height="23"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="3500.00" id="K2a-v8-f5F">
                                     <font key="font" metaFont="systemBold" size="20"/>
                                     <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -199,7 +199,7 @@
                                 </textFieldCell>
                             </textField>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ebT-bt-2qi">
-                                <rect key="frame" x="561" y="207" width="32" height="15"/>
+                                <rect key="frame" x="561" y="314" width="32" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="32" id="5Qa-OF-bU3"/>
                                     <constraint firstAttribute="height" constant="15" id="hpZ-a2-I7G"/>
@@ -207,7 +207,7 @@
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="up" id="UOt-Ex-CA0"/>
                             </imageView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="lKC-xd-rD8">
-                                <rect key="frame" x="794" y="227" width="86" height="23"/>
+                                <rect key="frame" x="794" y="334" width="86" height="23"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="创业板指" id="44D-Vu-lfR">
                                     <font key="font" metaFont="systemBold" size="20"/>
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
@@ -215,7 +215,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="W2k-Jh-isB">
-                                <rect key="frame" x="793" y="192" width="89" height="23"/>
+                                <rect key="frame" x="793" y="299" width="89" height="23"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="3500.00" id="7HE-0a-euv">
                                     <font key="font" metaFont="systemBold" size="20"/>
                                     <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -223,7 +223,7 @@
                                 </textFieldCell>
                             </textField>
                             <imageView horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="prU-8J-5Zw">
-                                <rect key="frame" x="900" y="207" width="32" height="15"/>
+                                <rect key="frame" x="900" y="314" width="32" height="15"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="15" id="4bB-Xy-KXv"/>
                                     <constraint firstAttribute="width" constant="32" id="jWO-9Q-wIo"/>
@@ -231,7 +231,7 @@
                                 <imageCell key="cell" refusesFirstResponder="YES" alignment="left" imageScaling="proportionallyDown" image="up" id="ZEv-2R-7Ix"/>
                             </imageView>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="yng-gL-2yN">
-                                <rect key="frame" x="225" y="184" width="28" height="15"/>
+                                <rect key="frame" x="225" y="291" width="28" height="15"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="1.23" id="h0e-5f-nvu">
                                     <font key="font" metaFont="cellTitle"/>
                                     <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -239,7 +239,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="iCA-c2-YO8">
-                                <rect key="frame" x="563" y="184" width="28" height="15"/>
+                                <rect key="frame" x="563" y="291" width="28" height="15"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="1.23" id="4eN-Le-N2k">
                                     <font key="font" metaFont="cellTitle"/>
                                     <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -247,7 +247,7 @@
                                 </textFieldCell>
                             </textField>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="IwG-H3-tx9">
-                                <rect key="frame" x="902" y="184" width="28" height="15"/>
+                                <rect key="frame" x="902" y="291" width="28" height="15"/>
                                 <textFieldCell key="cell" lineBreakMode="clipping" title="1.23" id="k39-01-Nee">
                                     <font key="font" metaFont="cellTitle"/>
                                     <color key="textColor" name="systemRedColor" catalog="System" colorSpace="catalog"/>
@@ -271,7 +271,7 @@
                                 </textFieldCell>
                             </textField>
                             <button verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="udF-2Y-zqB">
-                                <rect key="frame" x="201" y="146" width="80" height="32"/>
+                                <rect key="frame" x="201" y="254" width="80" height="32"/>
                                 <buttonCell key="cell" type="push" title="榜单区" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="55b-Qp-xdE">
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
@@ -311,13 +311,13 @@
                                 </connections>
                             </button>
                             <scrollView autohidesScrollers="YES" horizontalLineScroll="42" horizontalPageScroll="10" verticalLineScroll="42" verticalPageScroll="10" usesPredominantAxisScrolling="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpo-QG-cUl">
-                                <rect key="frame" x="20" y="50" width="956" height="84"/>
+                                <rect key="frame" x="20" y="50" width="956" height="192"/>
                                 <clipView key="contentView" drawsBackground="NO" copiesOnScroll="NO" id="hn9-ex-Cem">
-                                    <rect key="frame" x="1" y="0.0" width="954" height="83"/>
+                                    <rect key="frame" x="1" y="0.0" width="954" height="191"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                     <subviews>
                                         <tableView verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnSelection="YES" autosaveColumns="NO" rowHeight="40" rowSizeStyle="automatic" headerView="17a-Vo-14B" viewBased="YES" floatsGroupRows="NO" id="GeH-Hi-TVC" customClass="NSMenuTableView">
-                                            <rect key="frame" x="0.0" y="0.0" width="954" height="58"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="954" height="166"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <size key="intercellSpacing" width="3" height="2"/>
                                             <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
@@ -644,7 +644,7 @@
                 </viewController>
                 <customObject id="rPt-NT-nkU" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2" y="1549.5"/>
+            <point key="canvasLocation" x="-2" y="1589.5"/>
         </scene>
     </scenes>
     <resources>
